v20180323 - epierre
  - unique configuration file
  - install domoticz_gaspar directory where you want